bug fix for scroll indicator on mobile view

--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,8 @@ h5 {
 /*========== Scroll Indicator ==========*/
 #progress-bar-container {
   position: fixed;
+  top: 0;
+  z-index: 1;
   width: 100%;
   height: 0.25rem;
 }
@@ -273,15 +275,15 @@ footer a {
 @media screen and (max-width: 1440px) {
   #main-container {
     margin: 0;
-    width: 100vw;
-    overflow-x: hidden;
+    width: 100%;
+    /* overflow-x: hidden; */
     padding: 2rem 5rem;
   }
 
-  html,
+  /* html,
   body {
     overflow-x: hidden;
-  }
+  } */
 
   body {
     position: relative;
